--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -84,7 +84,7 @@ jobs:
   deploy:
     environment:
       name: github-pages
-      url: ${{ my_portfolio.francisco_rochin.page_url }}
+      url: ${{steps.deployment.outputs.page_url}}
     runs-on: ubuntu-latest
     needs: build
     steps:
