--- a/package.json
+++ b/package.json
@@ -9,8 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-hover-card": "1.1.13",
+    "@radix-ui/react-navigation-menu": "1.2.12",
+    "@radix-ui/react-separator": "1.1.6",
+    "@radix-ui/react-slot": "1.2.2",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
+    "embla-carousel-react": "8.6.0",
+    "i": "0.3.7",
     "lucide-react": "0.507.0",
     "next": "15.3.1",
     "react": "^19.0.0",
@@ -25,7 +31,8 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
-    "tailwindcss": "^4",
+    "postcss": "8.5.3",
+    "tailwindcss": "4.1.5",
     "tw-animate-css": "1.2.9",
     "typescript": "^5"
   }
